코드 분리 및 정리, 검색 시 페이징 처리 중(active class 필요)

--- a/Toy-Project2_EGov/src/main/webapp/css/board/boardWrite.css
+++ b/Toy-Project2_EGov/src/main/webapp/css/board/boardWrite.css
@@ -24,14 +24,13 @@
 		margin: 20px 10px 0 20px;
 		display: inline-block;
 	}
-	.file-check {
-		margin: 20px 0 0 20px;
-		display: inline-block;
-	}
 	.requiredEle::after {
 	    content: '*';
 	    color: #ff0000;
 	}
 	.btn-primary {
 		margin-right: 90px;
+	}
+	.files {
+    	display: flex;
 	}
