게시판 페이징 전체 재구현 완료 및 검색 페이징 구현 중

--- a/Toy-Project2_EGov/src/main/webapp/css/board/board.css
+++ b/Toy-Project2_EGov/src/main/webapp/css/board/board.css
@@ -61,6 +61,16 @@
 	.sort_gubun {
 	 	margin-left: 220px;
 	}
+	.size {
+	    width: 400px;
+	    height: 40px;
+	    float: right;
+	    display: flex;
+	    align-items: center;
+	}
+	.size_gubun {
+	    margin-left: 474px;
+	}
 	.search input {
 	 	width: 60%;
 	 	height: 30px;
