--- a/Toy-Project2_EGov/src/main/webapp/css/board/boardModify.css
+++ b/Toy-Project2_EGov/src/main/webapp/css/board/boardModify.css
@@ -13,7 +13,7 @@
 		display: flex;
   		justify-content: center;
   		align-items: center;
-  		height: 40vh;
+  		height: 30vh;
 	}
  	.btn-primary {
 		margin: 0 50px 0 10px;
@@ -27,9 +27,12 @@
 		margin: 20px, 0, 0, 20px;
 		float: left;
 	}
-	#userId {
+	#id {
 		margin-right: 10px;
 	}
 	.anony {
 		margin-right: 10px;
+	}
+	.fileList {
+		margin: 80px 0 0 25px;
 	}
