--- a/Toy-Project2_EGov/src/main/webapp/css/board/boardWrite.css
+++ b/Toy-Project2_EGov/src/main/webapp/css/board/boardWrite.css
@@ -16,7 +16,7 @@
 		display: flex;
   		justify-content: center;
   		align-items: center;
-  		height: 20vh;
+  		height: 19vh;
 	}
 	.btn-primary {
 		padding: 10px;
@@ -33,14 +33,18 @@
 	.btn-primary {
 		margin-right: 90px;
 	}
-	.files {
-		display: flex;
-		margin: 20px 0 0 20px;
-	}
 	.removeFiles {
 		margin-left: 15px;
 	}
+	.attachment {
+		display: block;
+		margin: 18px 0 0 20px;
+	}
+	.files {
+		display: flex;
+		margin: 10px 0 -6px 20px;
+	}
 	.file {
 		display: flex;
-		margin: 20px 10px 0 20px;
+		margin: 15px 10px 0 20px;
 	}
